5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1602_825.log
== TEST (2019-03-20 19:28:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(area)
-- OUTPUT:
(60.75, 14)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:28:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(area)
-- EXECUTION TIME:
0.126461
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
(60.75, 14)
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
(456.8268, 14)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(area)
-- OUTPUT:
(60.75, 14)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(area)
-- OUTPUT:
(60.75, 14)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:29:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(round(area,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(area,3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:29:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3,14)
print(round(area,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(area,3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3.14)
volume = (4/3*3.14*raio**3)
print(round(area,3))
print(round(volume,3))
-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:30:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*3.14)
volume = (4/3*3.14*raio**3)
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.180289
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*pi)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = (raio**2*pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:31:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*pi)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = (raio**2*pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:31:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2*pi)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = (raio**2*pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:14:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = math.pi*(raio**2)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = math.pi*(raio**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:48:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2)*(math.pi)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.188916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 5, in <module>
    area = (raio**2)*(math.pi)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:48:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Valor do raio:"))
area = (raio**2)*(math.pi)
volume = (4/3*pi*raio**3)
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = (raio**2)*(math.pi)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
